Implement base for integrationtesting